# BlockmanLORD

./: CMakeLists.txt  README.md  TODO.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: get_cpm.cmake
dev/tools/bg/: offset_extract.py  so_files.py  transform.sh
source/actor/: CMakeLists.txt
source/client/: CMakeLists.txt
source/network/: CMakeLists.txt
source/res/: CMakeLists.txt
source/security/: CMakeLists.txt
source/server/: CMakeLists.txt  blord_server.cpp  blord_server.hpp
source/world/: CMakeLists.txt  Debug.hpp  Util.h  blord_map.cpp  blord_map.h
source/world/NBT/: NBT_Tag.h  NBT_Tag_Byte_Array.h  NBT_Tag_List.h
source/world/block/: Block.cpp  Block.h  BlockAddress.h  BlockInfo.h  BlockMaps.cpp  BlockMaps.h  BlockState.cpp  BlockState.h  BlockStateValue.cpp  BlockStateValue.h  BlockStateValueConvert.h  KDTree.h
source/world/chunk/: Chunk.cpp  Chunk.h  ChunkSection.cpp  ChunkSection.h  CustomVertex.h
source/world/entity/: Player.cpp  Player.h
source/world/ioaccess/: IOAccess.cpp  IOAccess.h  StdioInterface.cpp
source/world/level/: Level.cpp  Level.h  PairHash.cpp  PairHash.h
source/world/map/: MCRegion.cpp  MCRegion.h  Map.cpp  Map.h
source/world/model/: Coords.h  Element.cpp  Element.h  Face.cpp  Face.h  Model.cpp  Model.h  Rotation.cpp  Rotation.h  Variant.cpp  Variant.h
